Revisión de los HUs listo

--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -39,13 +39,19 @@
         </mat-error>
         }
       </div>
-
-      <!-- <div class="options-row">
-        <label> <input type="checkbox" /> Recordarme </label>
-        <a href="olvidar">¿Olvidaste tu contraseña?</a>
-      </div> -->
-
-      <button type="submit" style="background-color: #f57c00;">Iniciar Sesión</button>
+      <button type="submit">Iniciar Sesión</button>
     </form>
+  </div>
+
+    <div class="support-contact">
+    <p>Soporte Técnico:</p>
+    <p>
+      <i class="fas fa-phone-alt"></i> 
+      <a href="tel:+50624655000"> +(506) 2465-5000</a>
+    </p>
+    <p>
+      <i class="fas fa-envelope"></i> 
+      <a href="mailto:soporte@votoseguro.ac.cr"> soporte@votoseguro.ac.cr</a>
+    </p>
   </div>
 </div>
