Fin - Voto Seguro

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,8 +11,8 @@
   </div>
   <div class="user-info">
     <div class="user-details">
-      <span>Bienvenid(a) <i>{{ nombre }}</i></span>
-      <small>{{ rol }}</small>
+      <span>Bienvenid(a) <i>{{ user?.nombre }}</i></span>
+      <small>{{ user?.rol }}</small>
     </div>
   </div>
 
