--- a/src/app/votantes/votantes-index/votantes-index.component.html
+++ b/src/app/votantes/votantes-index/votantes-index.component.html
@@ -125,7 +125,7 @@
                   </button>
 
                   <!-- Botón Eliminar / Desactivar -->
-                  <button mat-icon-button (click)="delete(row._id)" style="color: #b52121">
+                  <button mat-icon-button (click)="delete(row.Identificacion)" style="color: #b52121">
                     <mat-icon>delete</mat-icon>
                   </button>
                 </div>
